# trading_agents_anthropic

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: competition.toml  default.toml
data/: backtest_prices.csv  backtest_quotes.csv  downloaded_portfolio_prices.csv  downloaded_portfolio_quotes.csv  downloaded_scan_prices.csv  downloaded_scan_quotes.csv  full_20gb_15m_prices.csv  full_20gb_15m_quotes.csv  mixed_official_crypto_proxy_overlap_prices.csv  mixed_official_crypto_proxy_overlap_quotes.csv  official10_overlap_prices.csv  official10_overlap_quotes.csv  research_crypto_proxy_14d_prices.csv  research_crypto_proxy_14d_quotes.csv  research_crypto_proxy_prices.csv  research_crypto_proxy_quotes.csv  sample_prices.csv  sample_quotes.csv
docs/: README.md
docs/00_onboarding/: 00_START_HERE.md  01_RULES_SUMMARY.md  02_VSCODE_SETUP.md  03_PROJECT_STRUCTURE.md
docs/10_foundations/: 04_COMPETITION_CLOCK.md  05_ACCOUNT_AND_RISK.md  08_CONFIGURATION.md  12_PREFLIGHT.md  19_PREFLIGHT_WARNINGS.md  34_COMPETITION_SCORING_AND_INSTRUMENTS.md
docs/20_data_execution/: 06_DRY_RUN_JOURNAL.md  09_MARKET_DATA_CSV.md  10_MARKET_QUALITY.md  13_JOURNAL_SUMMARY.md  14_HTML_REPORT.md  20_STATEFUL_DRY_RUN_POSITIONS.md  21_PNL_ATTRIBUTION.md  23_MARKET_DATA_VALIDATION.md  37_MT5_READ_ONLY_LIVE_DRY_RUN.md  46_MANUAL_MT5_DESKTOP_EXECUTION.md  47_LIVE_OPERATOR_DASHBOARD.md
docs/30_strategies/: 07_SIMPLE_STRATEGY.md  17_STRATEGY_REGISTRY.md  24_STRATEGY_DECISIONS.md  26_REGIME_SELECTOR.md  27_ALPHA_ROUTER.md  28_BREAKOUT_STRATEGY.md  30_ML_ALPHA_ROUTER.md  31_ML_ALPHA_EVALUATION.md  32_ROUTER_ATTRIBUTION.md  33_MOVING_AVERAGE_CROSSOVER.md  36_PORTFOLIO_ALLOCATOR_AND_ROUTER_OPTIMIZATION.md  42_ALPHA_RESEARCH.md  43_SESSION_BREAKOUT.md  45_USD_PRESSURE_ROUTER.md  47_RELATIVE_STRENGTH.md  48_ADVANCED_TIME_SERIES_REGIME.md  50_FX_CROSS_RATE_REVERSION.md  52_VOLATILITY_SQUEEZE.md  53_TREND_PULLBACK.md  55_DUAL_SQUEEZE.md  56_EXHAUSTION_REVERSAL.md  58_ASSET_ADAPTIVE_DUAL_SQUEEZE.md  59_FIXING_REVERSAL.md  60_KALMAN_TREND.md  61_CHAMPION_ENSEMBLE.md  62_MACD_MOMENTUM.md  66_MULTI_HORIZON_MOMENTUM.md  68_AUTOCORRELATION_REGIME.md  69_QUALITY_TREND.md  70_CONDITIONAL_SEASONALITY.md  70_LIQUIDITY_SWEEP_REVERSAL.md  71_RANGE_EXPANSION_TREND.md  72_ASSET_ADAPTIVE_MACD.md  73_CRYPTO_MEAN_REVERSION.md
docs/40_evaluation/: 100_CRYPTO_OVERLAY_FOLD_DIAGNOSTIC.md  101_CRYPTO_OVERLAY_COMPONENT_ABLATION.md  102_CRYPTO_PROMOTION_PIPELINE.md  103_CRYPTO_FOLD_STABILITY_OPTIMIZATION.md  104_ASSET_CLASS_STABILITY_OPTIMIZATION.md  105_DEPLOYMENT_PROFILE_PACK.md  106_DEPLOYMENT_PROFILE_BACKTEST.md  107_DEPLOYMENT_PROFILE_SIGNAL_SNAPSHOT.md  108_DEPLOYMENT_PROFILE_SELECTOR.md  109_DEPLOYMENT_PROFILE_SELECTOR_SWEEP.md  110_DEPLOYMENT_PROFILE_RECOMMENDATION.md  111_DEPLOYMENT_PROFILE_ACTION_SCAN.md  112_DEPLOYMENT_PROFILE_SESSION_ATTRIBUTION.md  113_DEPLOYMENT_PROFILE_ATTRIBUTION_REFINEMENT.md  114_DEPLOYMENT_PROFILE_SESSION_GATE_REFINEMENT.md  115_DEPLOYMENT_PROFILE_SYMBOL_GATE_REFINEMENT.md  116_DEPLOYMENT_PROFILE_CHALLENGER_SCORECARD.md  117_DEPLOYMENT_PROFILE_ROBUSTNESS.md  118_DEPLOYMENT_PROFILE_DEPENDENCY_REFINEMENT.md  119_DEPLOYMENT_PROFILE_DEPENDENCY_REPLACEMENT.md  11_ARCHITECTURE_AND_NEXT_STEPS.md  120_DEPLOYMENT_PROFILE_SYMBOL_EVIDENCE_GATE.md  121_MACD_SYMBOL_UNIVERSE_REFINEMENT.md  122_MACD_SQUEEZE_COMPLEMENT.md  123_ADAPTIVE_STRATEGY_POLICY_SWEEP.md  124_ADAPTIVE_SELECTOR_ORACLE_DIAGNOSTIC.md  125_ADAPTIVE_HANDOFF_DIAGNOSTIC.md  15_BACKTESTING.md  16_PARAMETER_SWEEP.md  18_STRATEGY_COMPARISON.md  22_RESEARCH_REPORT.md  25_WALK_FORWARD_EVALUATION.md  29_PORTFOLIO_BACKTESTING.md  35_MULTI_SYMBOL_DATA_AND_PORTFOLIO_COMPARE.md  38_DOWNLOADED_BACKTEST_DATA.md  39_PORTFOLIO_UNIVERSE_SCAN.md  40_PORTFOLIO_WALK_FORWARD.md  41_PORTFOLIO_ROUTER_WALK_FORWARD.md  44_DASHBOARD.md  49_SIGNAL_DIAGNOSTICS.md  (+35 more)
docs/50_technology_prize/: 126_AGENTSDK_CONTROL_PLANE.md
scripts/: README.md
scripts/dry_run/: configured_strategy_dry_run.py  data_strategy_dry_run.py  dry_run_trade.py  live_dry_run.py  manual_ticket.py  mt5_capture.py  quality_data_strategy_dry_run.py  risk_demo.py  strategy_dry_run.py
scripts/evaluation/: compare_strategies.py  dual_squeeze_optimize.py  generate_sample_data.py  import_backtest_data.py  ml_alpha_report.py  portfolio_compare.py  portfolio_router_walk_forward.py  portfolio_universe_scan.py  portfolio_walk_forward.py  relative_strength_optimize.py  router_optimize.py  router_report.py  run_backtest.py  run_portfolio_backtest.py  run_sweep.py  run_walk_forward.py  signal_diagnostics.py  strategy_attribution.py  strategy_demo.py  symbol_eligibility_optimize.py  time_series_report.py  (+3 more)
tests/: test_adaptive_handoff_diagnostic.py  test_adaptive_strategy_oracle.py  test_adaptive_strategy_policy_sweep.py  test_adaptive_strategy_selector.py  test_asset_class_attribution.py  test_asset_class_stability_optimizer.py  test_autocorrelation_regime_optimizer.py  test_backtest.py  test_backtest_import.py  test_candidate_scorecard.py  test_champion_ensemble_optimizer.py  test_cli.py  test_clock.py  test_competition_monitor.py  test_competition_score.py  test_config.py  test_cross_rate_optimizer.py  test_crypto_allocation_compare.py  test_crypto_fold_stability_optimizer.py  test_crypto_overlay_compare.py  test_crypto_overlay_component_ablation.py  test_crypto_overlay_fold_diagnostic.py  test_crypto_overlay_sizing_compare.py  test_crypto_promotion_pipeline.py  test_crypto_proxy_data.py  test_crypto_sleeve_compare.py  test_dashboard.py  test_data_health.py  test_deployment_profile_action_scan.py  test_deployment_profile_attribution_refiner.py  test_deployment_profile_backtest.py  test_deployment_profile_challenger.py  test_deployment_profile_dependency_refiner.py  test_deployment_profile_dependency_replacement_refiner.py  test_deployment_profile_pack.py  test_deployment_profile_robustness.py  test_deployment_profile_selector.py  test_deployment_profile_session_attribution.py  test_deployment_profile_session_gate_refiner.py  test_deployment_profile_snapshot.py  (+64 more)
(+274 files in other folders)
